[gd_scene load_steps=21 format=2]

[ext_resource path="res://UI/Assets/road_icon.png" type="Texture" id=1]
[ext_resource path="res://World/HUD.gd" type="Script" id=2]
[ext_resource path="res://UI/Assets/forest_icon.png" type="Texture" id=3]
[ext_resource path="res://UI/Assets/grey_panel.png" type="Texture" id=4]
[ext_resource path="res://UI/Assets/red_cross.png" type="Texture" id=5]
[ext_resource path="res://UI/Assets/Bridge_icon.png" type="Texture" id=6]
[ext_resource path="res://UI/Assets/Resid_office_icon.png" type="Texture" id=7]
[ext_resource path="res://World/TimeHUD.gd" type="Script" id=8]
[ext_resource path="res://UI/Theme/HUD.tres" type="Theme" id=9]
[ext_resource path="res://UI/Assets/comm_office_icon.png" type="Texture" id=10]
[ext_resource path="res://World/Stats.gd" type="Script" id=11]
[ext_resource path="res://UI/Theme/Kenney Rocket.ttf" type="DynamicFontData" id=12]
[ext_resource path="res://UI/Assets/Kaede default.png" type="Texture" id=13]
[ext_resource path="res://UI/Assets/grey_sliderVertical.png" type="Texture" id=14]
[ext_resource path="res://World/Helper.gd" type="Script" id=15]
[ext_resource path="res://UI/Assets/green_button01.png" type="Texture" id=16]
[ext_resource path="res://UI/Assets/green_button00.png" type="Texture" id=17]
[ext_resource path="res://UI/Assets/Power_Icon.png" type="Texture" id=18]
[ext_resource path="res://UI/Assets/police_icon.png" type="Texture" id=19]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 12 )

[node name="HUD" type="CanvasLayer"]

[node name="BuildMenu" type="Control" parent="." groups=["hud"]]
anchor_bottom = 1.0
margin_left = -225.0
margin_top = 2.0
margin_right = -6.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="BuildMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 200, 600 )
texture = ExtResource( 4 )
patch_margin_left = 20
patch_margin_top = 20
patch_margin_right = 20
patch_margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="BuildMenu/NinePatchRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Demolish" type="Button" parent="BuildMenu/NinePatchRect/GridContainer"]
margin_right = 96.0
margin_bottom = 56.0
icon = ExtResource( 5 )

[node name="Place_road" type="Button" parent="BuildMenu/NinePatchRect/GridContainer"]
margin_left = 100.0
margin_right = 196.0
margin_bottom = 56.0
text = " $5"
icon = ExtResource( 1 )

[node name="Label" type="Label" parent="BuildMenu/NinePatchRect/GridContainer"]
modulate = Color( 0, 0, 0, 1 )
margin_top = 60.0
margin_right = 96.0
margin_bottom = 74.0
text = "Demolish"
align = 1
valign = 1

[node name="Label2" type="Label" parent="BuildMenu/NinePatchRect/GridContainer"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 100.0
margin_top = 60.0
margin_right = 196.0
margin_bottom = 74.0
text = "Road"
align = 1
valign = 1

[node name="Place_forest" type="Button" parent="BuildMenu/NinePatchRect/GridContainer"]
margin_top = 78.0
margin_right = 96.0
margin_bottom = 134.0
text = " $25"
icon = ExtResource( 3 )

[node name="Place_bridge" type="Button" parent="BuildMenu/NinePatchRect/GridContainer"]
margin_left = 100.0
margin_top = 78.0
margin_right = 196.0
margin_bottom = 134.0
text = " $15"
icon = ExtResource( 6 )

[node name="Label3" type="Label" parent="BuildMenu/NinePatchRect/GridContainer"]
modulate = Color( 0, 0, 0, 1 )
margin_top = 138.0
margin_right = 96.0
margin_bottom = 152.0
text = "Forest"
align = 1
valign = 1

[node name="Label4" type="Label" parent="BuildMenu/NinePatchRect/GridContainer"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 100.0
margin_top = 138.0
margin_right = 196.0
margin_bottom = 152.0
text = "Bridge"
align = 1
valign = 1

[node name="Place_resid_office" type="Button" parent="BuildMenu/NinePatchRect/GridContainer"]
margin_top = 156.0
margin_right = 96.0
margin_bottom = 236.0
text = "$200"
icon = ExtResource( 7 )

[node name="Place_comm_office" type="Button" parent="BuildMenu/NinePatchRect/GridContainer"]
margin_left = 100.0
margin_top = 156.0
margin_right = 196.0
margin_bottom = 236.0
text = "$500"
icon = ExtResource( 10 )

[node name="Label5" type="Label" parent="BuildMenu/NinePatchRect/GridContainer"]
modulate = Color( 0, 0, 0, 1 )
margin_top = 240.0
margin_right = 96.0
margin_bottom = 254.0
text = "Residential"
align = 1
valign = 1

[node name="Label6" type="Label" parent="BuildMenu/NinePatchRect/GridContainer"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 100.0
margin_top = 240.0
margin_right = 196.0
margin_bottom = 254.0
text = "Commercial"
align = 1
valign = 1

[node name="Place_Power" type="Button" parent="BuildMenu/NinePatchRect/GridContainer"]
margin_top = 258.0
margin_right = 96.0
margin_bottom = 338.0
text = "$900"
icon = ExtResource( 18 )

[node name="Place_Police" type="Button" parent="BuildMenu/NinePatchRect/GridContainer"]
margin_left = 100.0
margin_top = 258.0
margin_right = 196.0
margin_bottom = 338.0
text = "$900"
icon = ExtResource( 19 )

[node name="Label7" type="Label" parent="BuildMenu/NinePatchRect/GridContainer"]
modulate = Color( 0, 0, 0, 1 )
margin_top = 342.0
margin_right = 96.0
margin_bottom = 356.0
text = "Power Plant"
align = 1
valign = 1

[node name="Label8" type="Label" parent="BuildMenu/NinePatchRect/GridContainer"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 100.0
margin_top = 342.0
margin_right = 196.0
margin_bottom = 356.0
text = "Police Station"
align = 1
valign = 1

[node name="Tween" type="Tween" parent="BuildMenu"]

[node name="Error" type="Popup" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -55.0
margin_right = 56.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ErrorLabel" type="Label" parent="Error"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -50.0
margin_right = 50.0
margin_bottom = 14.0
text = "Cant Build Here"
align = 1
valign = 1
autowrap = true

[node name="PopTimer" type="Timer" parent="Error"]
one_shot = true

[node name="TimeHUD" type="TextureRect" parent="." groups=["time"]]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -205.0
margin_bottom = 52.0
theme = ExtResource( 9 )
texture = ExtResource( 4 )
expand = true
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Time" type="Label" parent="TimeHUD"]
self_modulate = Color( 0, 0, 0, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
text = "1 Jan 1980"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Stats" type="Control" parent="." groups=["stats"]]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -267.0
margin_top = -123.0
theme = ExtResource( 9 )
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="Stats"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 4 )
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="Stats/NinePatchRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Money" type="Label" parent="Stats/NinePatchRect/GridContainer"]
modulate = Color( 0, 0, 0, 1 )
margin_right = 156.0
margin_bottom = 20.0
custom_fonts/font = SubResource( 1 )
text = "Funds :"

[node name="Happiness" type="Label" parent="Stats/NinePatchRect/GridContainer"]
modulate = Color( 0, 0, 0, 1 )
margin_top = 24.0
margin_right = 156.0
margin_bottom = 44.0
custom_fonts/font = SubResource( 1 )
text = "Happiness:"

[node name="Population" type="Label" parent="Stats/NinePatchRect/GridContainer"]
modulate = Color( 0, 0, 0, 1 )
margin_top = 48.0
margin_right = 156.0
margin_bottom = 68.0
custom_fonts/font = SubResource( 1 )
text = "Population:"

[node name="Helper" type="Popup" parent="." groups=["helper"]]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -350.0
margin_top = -250.0
margin_right = 350.0
margin_bottom = 250.0
mouse_filter = 2
theme = ExtResource( 9 )
script = ExtResource( 15 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="Helper"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -350.0
margin_top = -250.0
margin_right = 350.0
margin_bottom = 250.0
rect_min_size = Vector2( 700, 500 )
texture = ExtResource( 4 )
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10

[node name="seperator_1" type="Sprite" parent="Helper/NinePatchRect"]
position = Vector2( 258, 28 )
rotation = 1.5708
scale = Vector2( 1, 4.48 )
texture = ExtResource( 14 )

[node name="seperator_2" type="Sprite" parent="Helper/NinePatchRect"]
position = Vector2( 258, 68 )
rotation = 1.5708
scale = Vector2( 1, 4.48 )
texture = ExtResource( 14 )

[node name="seperator_3" type="Sprite" parent="Helper/NinePatchRect"]
position = Vector2( 341.66, 463.713 )
rotation = 1.5708
scale = Vector2( 1, 6.12 )
texture = ExtResource( 14 )

[node name="TextureRect" type="TextureRect" parent="Helper/NinePatchRect"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -170.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = 170.0
rect_min_size = Vector2( 150, 150 )
texture = ExtResource( 13 )
expand = true
stretch_mode = 1

[node name="Heading" type="Label" parent="Helper/NinePatchRect"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 42.0
margin_top = 32.0
margin_right = 471.0
margin_bottom = 63.0
text = "Hello"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Message" type="Label" parent="Helper/NinePatchRect"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 43.0
margin_top = 87.0
margin_right = 525.0
margin_bottom = 453.0
text = "Hello"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton" type="TextureButton" parent="Helper/NinePatchRect"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -161.464
margin_top = -84.2729
margin_right = -29.464
margin_bottom = -49.2729
texture_normal = ExtResource( 17 )
texture_pressed = ExtResource( 16 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="mouse_entered" from="BuildMenu" to="BuildMenu" method="_on_BuildMenu_mouse_entered"]
[connection signal="mouse_exited" from="BuildMenu" to="BuildMenu" method="_on_BuildMenu_mouse_exited"]
[connection signal="mouse_entered" from="BuildMenu/NinePatchRect/GridContainer/Demolish" to="BuildMenu" method="_on_BuildMenu_mouse_entered"]
[connection signal="mouse_exited" from="BuildMenu/NinePatchRect/GridContainer/Demolish" to="BuildMenu" method="_on_BuildMenu_mouse_exited"]
[connection signal="pressed" from="BuildMenu/NinePatchRect/GridContainer/Demolish" to="BuildMenu" method="_on_Demolish_pressed"]
[connection signal="mouse_entered" from="BuildMenu/NinePatchRect/GridContainer/Place_road" to="BuildMenu" method="_on_BuildMenu_mouse_entered"]
[connection signal="mouse_exited" from="BuildMenu/NinePatchRect/GridContainer/Place_road" to="BuildMenu" method="_on_BuildMenu_mouse_exited"]
[connection signal="pressed" from="BuildMenu/NinePatchRect/GridContainer/Place_road" to="BuildMenu" method="_on_Place_road_pressed"]
[connection signal="mouse_entered" from="BuildMenu/NinePatchRect/GridContainer/Place_forest" to="BuildMenu" method="_on_BuildMenu_mouse_entered"]
[connection signal="mouse_exited" from="BuildMenu/NinePatchRect/GridContainer/Place_forest" to="BuildMenu" method="_on_BuildMenu_mouse_exited"]
[connection signal="pressed" from="BuildMenu/NinePatchRect/GridContainer/Place_forest" to="BuildMenu" method="_on_Place_forest_pressed"]
[connection signal="mouse_entered" from="BuildMenu/NinePatchRect/GridContainer/Place_bridge" to="BuildMenu" method="_on_BuildMenu_mouse_entered"]
[connection signal="mouse_exited" from="BuildMenu/NinePatchRect/GridContainer/Place_bridge" to="BuildMenu" method="_on_BuildMenu_mouse_exited"]
[connection signal="pressed" from="BuildMenu/NinePatchRect/GridContainer/Place_bridge" to="BuildMenu" method="_on_Place_bridge_pressed"]
[connection signal="mouse_entered" from="BuildMenu/NinePatchRect/GridContainer/Place_resid_office" to="BuildMenu" method="_on_BuildMenu_mouse_entered"]
[connection signal="mouse_exited" from="BuildMenu/NinePatchRect/GridContainer/Place_resid_office" to="BuildMenu" method="_on_BuildMenu_mouse_exited"]
[connection signal="pressed" from="BuildMenu/NinePatchRect/GridContainer/Place_resid_office" to="BuildMenu" method="_on_Place_resid_office_pressed"]
[connection signal="mouse_entered" from="BuildMenu/NinePatchRect/GridContainer/Place_comm_office" to="BuildMenu" method="_on_BuildMenu_mouse_entered"]
[connection signal="mouse_exited" from="BuildMenu/NinePatchRect/GridContainer/Place_comm_office" to="BuildMenu" method="_on_BuildMenu_mouse_exited"]
[connection signal="pressed" from="BuildMenu/NinePatchRect/GridContainer/Place_comm_office" to="BuildMenu" method="_on_Place_comm_office_pressed"]
[connection signal="mouse_entered" from="BuildMenu/NinePatchRect/GridContainer/Place_Power" to="BuildMenu" method="_on_BuildMenu_mouse_entered"]
[connection signal="mouse_exited" from="BuildMenu/NinePatchRect/GridContainer/Place_Power" to="BuildMenu" method="_on_BuildMenu_mouse_exited"]
[connection signal="pressed" from="BuildMenu/NinePatchRect/GridContainer/Place_Power" to="BuildMenu" method="_on_Place_Power_pressed"]
[connection signal="mouse_entered" from="BuildMenu/NinePatchRect/GridContainer/Place_Police" to="BuildMenu" method="_on_BuildMenu_mouse_entered"]
[connection signal="mouse_exited" from="BuildMenu/NinePatchRect/GridContainer/Place_Police" to="BuildMenu" method="_on_BuildMenu_mouse_exited"]
[connection signal="pressed" from="BuildMenu/NinePatchRect/GridContainer/Place_Police" to="BuildMenu" method="_on_Place_Police_pressed"]
[connection signal="timeout" from="Error/PopTimer" to="BuildMenu" method="_on_PopTimer_timeout"]
[connection signal="pressed" from="Helper/NinePatchRect/TextureButton" to="Helper" method="_on_TextureButton_pressed"]
